--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.7'
 services:
-  mysql:
+ mysql:
     image: mysql:8.0.34
     restart: always
     ports:
@@ -9,6 +9,6 @@ services:
       - ./schema:/docker-entrypoint-initdb.d
     environment:
       - MYSQL_RANDOM_ROOT_PASSWORD=yes
-      - MYSQL_DATABASE=db
+      - MYSQL_DATABASE=app
       - MYSQL_USER=app
       - MYSQL_PASSWORD=pass
